list auto-followers in playbook preview
